discussion/kv_engine/173099/173099_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-33549: Add tests for all EPStats

Ensure that we test that all EPStats' stats are both
initialized and reset to the correct values.

Some of these tests are currently disabled and will
be enabled in a later patch.

Change-Id: Iba1a031de27df8744311a526e3ca3b62c3bea876

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-07 13:47:37.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-04-07 13:47:37.000000000
Message: 
Patch Set 17:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 13:57:44.000000000
Message: 
Patch Set 17: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45064/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\stats_test.cc(964): error C2679: binary "=": no operator found which takes a right-hand operand of type "std::ostream *" (or there is no acceptable conversion) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45064/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16469/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/stats_test.cc:964:25: error: no viable overloaded "=" [clang-diagnostic-error]
        stats.timingLog = nonDefaultOStream;
                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:358:19: note: candidate function not viable: no known conversion from "std::ostream *" (aka "basic_ostream<char> *") to "const std::shared_ptr<std::basic_ostream<char> >" for 1st argument
      shared_ptr& operator=(const shared_ptr&) noexcept = default;
                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:382:7: note: candidate function not viable: no known conversion from "std::ostream *" (aka "basic_ostream<char> *") to "std::shared_ptr<std::basic_ostream<char> >" for 1st argument
      operator=(shared_ptr&& __r) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:362:2: note: candidate template ignored: could not match "shared_ptr<type-parameter-0-0>" against "std::basic_ostream<char> *"
        operator=(const shared_ptr<_Yp>& __r) noexcept
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:373:2: note: candidate template ignored: could not match "auto_ptr<type-parameter-0-0>" against "std::basic_ostream<char> *"
        operator=(auto_ptr<_Yp>&& __r)
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:390:2: note: candidate template ignored: could not match "shared_ptr<type-parameter-0-0>" against "std::basic_ostream<char> *"
        operator=(shared_ptr<_Yp>&& __r) noexcept
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:398:2: note: candidate template ignored: could not match "unique_ptr<type-parameter-0-0, type-parameter-0-1>" against "std::basic_ostream<char> *"
        operator=(unique_ptr<_Yp, _Del>&& __r)
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16469/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/stats_test.cc:964:25:
error: no viable overloaded "=" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16469/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6122/ : FAILURE

Compile error at [2022-04-07T13:50:50.563Z] ../kv_engine/engines/ep/tests/module_tests/stats_test.cc:964:25:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6122/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17334/ : FAILURE

Compile error at [2022-04-07T13:54:00.379Z] ../kv_engine/engines/ep/tests/module_tests/stats_test.cc:964:25:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17334/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18575/ : FAILURE

Compile error at [2022-04-07T13:50:43.975Z] ../kv_engine/engines/ep/tests/module_tests/stats_test.cc:964:27:
error: no match for ?operator=? (operand types are ?std::shared_ptr<std::basic_ostream<char> >? and ?std::ostream*? {aka ?std::basic_ostream<char>*?})
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18575/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18239/ : FAILURE

Compile error at [2022-04-07T13:51:49.917Z] ../kv_engine/engines/ep/tests/module_tests/stats_test.cc:964:27:
error: no match for ?operator=? (operand types are ?std::shared_ptr<std::basic_ostream<char> >? and ?std::ostream*? {aka ?std::basic_ostream<char>*?})
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18239/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19270/ : FAILURE

Compile error at [2022-04-07T13:49:58.296Z] ../kv_engine/engines/ep/tests/module_tests/stats_test.cc:964:25:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19270/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26649/ : FAILURE

Compile error at [2022-04-07T13:55:02.172Z] ../kv_engine/engines/ep/tests/module_tests/stats_test.cc:964:25:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26649/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6182/ : FAILURE

Compile error at [2022-04-07T13:56:41.554Z] ../kv_engine/engines/ep/tests/module_tests/stats_test.cc:964:27:
error: no match for ?operator=? (operand types are ?std::shared_ptr<std::basic_ostream<char> >? and ?std::ostream*? {aka ?std::basic_ostream<char>*?})
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6182/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37853/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15404/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
